# books-courses-tutorials

./: LICENSE  README.md
.devcontainer/: devcontainer.json
ArchitecturePatternsWithPython/: README.md  allocation_service.py  pyproject.toml  test_allocation_service.py
BeginningCppGameProgramming/: .gitignore  README.md
BeginningCppGameProgramming/Timber/: Makefile  Timber.cpp  main.cpp
BuildingSkillsOOD/: README.md
InsaRouenIntroAI/: .gitignore  README.md  deep-learning.ipynb  machine-learning.ipynb
InsaRouenIntroAI/edge-detection/: Practical-Edge_detection-SS2023.ipynb  sanstitre0.py
TestingWithPytest/: README.md
