[tool.poetry]
name = "allocation-service"
version = "0.1.0"
description = "Project following the book Architecture patterns with Python"
authors = ["Juan Benavides <jbbenavidesr@gmail.com>"]
readme = "README.md"
packages = [{include = "allocation_service"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.270"
mypy = "^1.3.0"

[tool.ruff]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
